# GameMathGym

./: .gitattributes  .gitignore  3d_model_demo.cpp  CMakeLists.txt  CMakePresets.json  README.md  boilerplate.cpp  draw_triangle.cpp  main.cpp  textures_demo.cpp  vcpkg.json
.github/workflows/: unit_tests.yml
demos/: boilerplate.cpp
demos/3d_model/: 3d_model_demo.cpp  CMakeLists.txt
demos/draw_triangle/: CMakeLists.txt  draw_triangle.cpp
demos/gtest_sample/: CMakeLists.txt  gtest_sample.cpp
demos/imgui_sample/: CMakeLists.txt  imgui_demo.cpp
demos/textures/: CMakeLists.txt  textures_demo.cpp
math_utils/: CMakeLists.txt  matrix4.cpp  matrix4.h  matrix4_tests.cpp  vector3.cpp  vector3.h  vector3_tests.cpp
shaders/: base_material.frag  base_material.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
utils/: shader_utils.cpp  shader_utils.h
